<resources>
    <string name="app_name">Water Reminder</string>

    <string name="home_label">Home</string>
    <string name="statistics_label">Statistics</string>
    <string name="settings_label">Settings</string>
    <string name="btn_next_text">Next</string>
    <string name="starter_intro_text">In order to calculate the amount of water you consume, you must provide some information about you.</string>
    <string name="starter_intro_title">Your personal companion</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="starter_gender_title">Your gender</string>
    <string name="starter_weight_title">Your weight</string>
    <string name="starter_wakeup_title">Wake-up Time</string>
    <string name="starter_bed_time_title">Sleep Time</string>

    <string name="notification_title">Time to drink water</string>
    <string name="notification_text">Please drink the required amount of water.</string>

    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="water_limit_title">Water limit</string>
    <string name="water_limit_value">%s ml</string>
    <string name="need_a_reminder_title">Need a reminder?</string>
    <string name="reminder_interval_title">Reminder interval</string>
    <string name="remind_interval_value">%s h</string>
    <string name="weight_value">%s kg</string>
    <string name="change_reminder_interval_title">Change reminder interval</string>
    <string name="change_water_limit_title">Change water limit</string>
    <string name="change_gender_title">Change gender</string>
    <string name="change_weight_title">Change weight</string>
    <string name="change_wake_up_time_title">Change wake up time</string>
    <string name="change_bed_time_title">Change bed time</string>

    <string name="dialog_save_btn">Save</string>
    <string name="dialog_cancel_btn">Cancel</string>
    <string name="dialog_close_btn">Close</string>

    <string name="add_custom_water_amount">Add the amount of water you drink</string>

    <string name="remaining_percentage_today">%d%% Today</string>
    <string name="remaining_amount_today">%d ml left to reach the goal</string>
    <string name="remaining_amount_more_today">%d ml more than needed</string>
    <string name="goal_is_reached">You have reached your goal</string>
    
    <string name="toast_enter_amount_of_water">Enter the amount of water you drink</string>

    <string name="volume_format">%d ml</string>
    <string name="switch_cup">Switch a cup</string>
    
    <string name="daily_tab">Daily</string>
    <string name="monthly_tab">Monthly</string>
    <string name="daily_hint">Drink water and then the corresponding entry will appear here</string>
</resources>